2004-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.am:
	* Makefile.in:
	* NEWS: Add DESTDIR support.

2004-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/snpdbg.tcl (snpdbg_parse_files): Rework
	the exec of cbrowser2 so that it works properly
	under Windows. Also, remove the .exe extension
	from the output printed to the files tab.

2004-01-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure.in: Update version number to 5.2b2.
	* configure: Regen.

2004-01-07  Mo DeJong  <mdejong@users.sourceforge.net>

	Add initial attempt at a parser debug utility
	called snpdbg. This util will run the parsers
	over source code in a directory and detect
	crashes in the parser. Users have often run
	into parser problems but they lack the
	ability to identify where the problem is exactly.

	* NEWS: Add note about snpdbg.
	* gui/Makefile.am: Add snpdbg.tcl to install rule.
	* gui/Makefile.in: Regen.
	* gui/misc.tcl: Define snpdbg_session in snpdbg.tcl.
	* gui/snpdbg.tcl: Initial version of parser debugger.
	* gui/tclIndex: Add snpdbg.tcl.
	* snavigator/win/Makefile.am: Add build rules
	for snpdbg.
	* snavigator/win/Makefile.in: Regen.
	* snavigator/win/snpdbg.c: Add Windows startup
	executable for snpdbg program.

2004-01-04  Mo DeJong  <mdejong@users.sourceforge.net>

	Cleanup init script used with Source-Navigator,
	there is no longer any need to do the fancy
	configure time subst that we were doing. Also,
	add a snpdebug script (it does nothing yet).

	* configure: Regen.
	* configure.in: Don't generate scripts
	from .in files when it is not needed.
	a .in file since it is not needed.
	* etc/Makefile.am: Update after rename
	of navigato script, also add snpdbg.
	* etc/Makefile.in: Regen.
	* etc/navigato.in: Renamed to snavigator.
	* etc/snavigator: Renamed from navigato.in.
	* etc/snpdbg: Add startup script for
	snpdbg tool which will be used to debug
	parser problems.
	* gui/misc.tcl (snpdbg_session): Add