@@ -9,6 +9,8 @@
   enable testing of parsers outside of
   Source-Navigator
 - Add DESTDIR support
+- Fix double click paren/bracket matching
+  in the editor.
 
 5.2b1:
 - GNU tar no longer required to run `make install`
